add fixed code for bert

--- a/format_dataset.ipynb
+++ b/format_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 107,
    "id": "0f3eed89-753f-41e4-b125-01df98d2d77d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 108,
    "id": "9eccfbcd-7a11-4548-bd48-78ea3d2fa143",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 109,
+   "id": "4068db54-62fc-450f-ab7a-2fb5c9cf8cb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "def split_punctuation(text):\n",
+    "    for i in string.punctuation:\n",
+    "        text = text.replace(i, \" \"+i+\" \")\n",
+    "    text = \" \".join(text.split())\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "id": "5b523824-8134-4ba8-81ce-06564838dd78",
    "metadata": {},
    "outputs": [
@@ -110,7 +125,7 @@
        "4  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +136,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 111,
+   "id": "e3009125-f87d-41f4-965d-6c83d054db68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['text'] = df['text'].map(lambda x : split_punctuation(x))\n",
+    "df['summary'] = df['summary'].map(lambda x : split_punctuation(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "0cdaf9b8-6e0c-4a34-9561-427ee5bc1106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst_row = []\n",
+    "lst_summary = []\n",
+    "lst_spell = []\n",
+    "for idx, row in df.iterrows():\n",
+    "    if len(row['text'].split(' ')) != len(row['summary'].split(' ')):\n",
+    "        continue\n",
+    "    spell = []\n",
+    "    for i, j in zip(row['text'].split(' '), row['summary'].split(' ')):\n",
+    "        if i == j:\n",
+    "            spell.append(0)\n",
+    "        else:\n",
+    "            spell.append(1)\n",
+    "    lst_row.append(row['text'])\n",
+    "    lst_summary.append(row['summary'])\n",
+    "    lst_spell.append(spell)\n",
+    "    \n",
+    "\n",
+    "df = pd.DataFrame({\"text\":lst_row, \"spell\":lst_spell, \"summary\": lst_summary})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "c8cfb794-2e70-4ef1-a05c-583c1a11007b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>spell</th>\n",
+       "      <th>summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chây ì noojp phạt nguội .</td>\n",
+       "      <td>[0, 0, 1, 0, 0, 0]</td>\n",
+       "      <td>Chây ì nộp phạt nguội .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hàng chục ngàn phương tiện bị ghi hình vi phạm...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>Hàng chục ngàn phương tiện bị ghi hình vi phạm...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mây là á phương tiện vi phạm dc camera ( di dd...</td>\n",
+       "      <td>[1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, ...</td>\n",
+       "      <td>Đây là các phương tiện vi phạm được camera ( d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Phổ biến nhất là lỗi ỗ không đúng nơi quy định .</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>Phổ biến nhất là lỗi đỗ không đúng nơi quy định .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Chẳng hạn từ tháng 1 - 7 . 2017 , ô tô BS : 14...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>Chẳng hạn từ tháng 1 - 7 . 2017 , ô tô BS : 14...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  \\\n",
+       "0                          Chây ì noojp phạt nguội .   \n",
+       "1  Hàng chục ngàn phương tiện bị ghi hình vi phạm...   \n",
+       "2  mây là á phương tiện vi phạm dc camera ( di dd...   \n",
+       "3   Phổ biến nhất là lỗi ỗ không đúng nơi quy định .   \n",
+       "4  Chẳng hạn từ tháng 1 - 7 . 2017 , ô tô BS : 14...   \n",
+       "\n",
+       "                                               spell  \\\n",
+       "0                                 [0, 0, 1, 0, 0, 0]   \n",
+       "1  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "2  [1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, ...   \n",
+       "3               [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]   \n",
+       "4  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "\n",
+       "                                             summary  \n",
+       "0                            Chây ì nộp phạt nguội .  \n",
+       "1  Hàng chục ngàn phương tiện bị ghi hình vi phạm...  \n",
+       "2  Đây là các phương tiện vi phạm được camera ( d...  \n",
+       "3  Phổ biến nhất là lỗi đỗ không đúng nơi quy định .  \n",
+       "4  Chẳng hạn từ tháng 1 - 7 . 2017 , ô tô BS : 14...  "
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "id": "b247630c-daea-4467-82b9-3355e8348310",
    "metadata": {},
    "outputs": [],
@@ -171,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 115,
    "id": "83e8e5f3-3ca6-4c38-b3ac-62a8bbb77f4a",
    "metadata": {},
    "outputs": [],
@@ -183,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 116,
    "id": "ebeeba89-77b2-4ff1-bd5d-92b2bcee024e",
    "metadata": {},
    "outputs": [],
@@ -193,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 117,
    "id": "92763ee9-8a1c-4c74-8d2a-c181f3ce1696",
    "metadata": {},
    "outputs": [],
@@ -203,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 118,
    "id": "17048684-5a9a-4889-b428-578d072f34ee",
    "metadata": {},
    "outputs": [
@@ -211,12 +363,12 @@
      "data": {
       "text/plain": [
        "Dataset({\n",
-       "    features: ['text', 'summary', 'spell'],\n",
-       "    num_rows: 1000\n",
+       "    features: ['text', 'spell', 'summary'],\n",
+       "    num_rows: 969\n",
        "})"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,19 +379,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 120,
    "id": "19aa3397-6161-4000-af9a-d8426a51924e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "671af4bd4a904cee9eaa6ebaf71fb50a",
+       "model_id": "4281f0cfa3b44f98a77ad8688b8e7c95",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map (num_proc=8):   0%|          | 0/1000 [00:00<?, ? examples/s]"
+       "Map (num_proc=8):   0%|          | 0/969 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -248,11 +400,11 @@
    ],
    "source": [
     "def mapping_tokenizer(examples):\n",
-    "    examples['correct_token_ids'] = tokenizer(examples['summary'])['input_ids'][1:-1]\n",
+    "    examples['correct_token_ids'] = tokenizer(examples['summary'])['input_ids']\n",
     "    examples['error_ids'] = tokenizer(examples['text'])['input_ids']\n",
-    "    examples['label_errors'] = eval(examples['spell'])\n",
+    "    examples['label_errors'] = [0] + eval(str(examples['spell'])) + [0]\n",
     "    del examples['spell']\n",
-    "    examples['batch_split'] = calculate_size_subword([examples['text']], tokenizer)[0]\n",
+    "    examples['batch_split'] = [1] + calculate_size_subword([examples['text']], tokenizer)[0] + [1]\n",
     "    return examples\n",
     "\n",
     "dataset = dataset.map(mapping_tokenizer, batched=False, num_proc=8)"
@@ -260,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 121,
    "id": "d08c44cf-0522-4d06-949b-fe66a49e34c0",
    "metadata": {
     "scrolled": true
@@ -269,170 +421,309 @@
     {
      "data": {
       "text/plain": [
-       "{'text': \"Hàng chục ngàn phương tiện bị ghi hình vi phạm luật giao thông ở TP . HCM , bị ' bêu tên ' nhưng chủ van không chịu nộp phạt .\",\n",
-       " 'summary': \"Hàng chục ngàn phương tiện bị ghi hình vi phạm luật giao thông ở TP . HCM , bị ' bêu tên ' nhưng chủ vẫn không chịu nộp phạt .\",\n",
-       " 'correct_token_ids': [1383,\n",
-       "  781,\n",
-       "  1232,\n",
-       "  1607,\n",
-       "  5959,\n",
-       "  45,\n",
-       "  701,\n",
-       "  819,\n",
-       "  5237,\n",
-       "  2283,\n",
-       "  1252,\n",
-       "  574,\n",
-       "  2178,\n",
-       "  25,\n",
-       "  253,\n",
-       "  5,\n",
-       "  383,\n",
-       "  4,\n",
-       "  45,\n",
-       "  104,\n",
-       "  31742,\n",
-       "  221,\n",
-       "  104,\n",
-       "  51,\n",
-       "  286,\n",
-       "  74,\n",
-       "  17,\n",
-       "  551,\n",
-       "  1140,\n",
-       "  1133,\n",
-       "  5],\n",
-       " 'error_ids': [0,\n",
-       "  1383,\n",
-       "  781,\n",
-       "  1232,\n",
-       "  1607,\n",
-       "  5959,\n",
-       "  45,\n",
-       "  701,\n",
-       "  819,\n",
-       "  5237,\n",
-       "  2283,\n",
-       "  1252,\n",
-       "  574,\n",
-       "  2178,\n",
-       "  25,\n",
-       "  253,\n",
-       "  5,\n",
-       "  383,\n",
-       "  4,\n",
-       "  45,\n",
-       "  104,\n",
-       "  31742,\n",
-       "  221,\n",
-       "  104,\n",
-       "  51,\n",
-       "  286,\n",
-       "  4616,\n",
-       "  17,\n",
-       "  551,\n",
-       "  1140,\n",
-       "  1133,\n",
-       "  5,\n",
-       "  2],\n",
-       " 'label_errors': [0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  1,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0],\n",
-       " 'batch_split': [1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1]}"
+       "33"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset[1]"
+    "len(dataset[1]['error_ids'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 122,
    "id": "3c867ef9-1e2a-402f-a8f6-dd5c80c9967a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 1]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_size_subword(['<s> Trong 5 thập kỷ qua, dân số thị trấn này đã giảm gần một nửa, tư2 2, 25 0 ngườo xuống chỉ còn 1. 30 0 người do số lượng trẻ sơ sinh quá thấp. </s>'], tokenizer)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "361cc6ad-f03b-4509-b1b0-2158991bd544",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['<s>',\n",
+       " 'Trong',\n",
+       " '5',\n",
+       " 'thập',\n",
+       " 'kỷ',\n",
+       " 'qua@@',\n",
+       " ',',\n",
+       " 'dân',\n",
+       " 'số',\n",
+       " 'thị',\n",
+       " 'trấn',\n",
+       " 'này',\n",
+       " 'đã',\n",
+       " 'giảm',\n",
+       " 'gần',\n",
+       " 'một',\n",
+       " 'nử@@',\n",
+       " 'a@@',\n",
+       " ',',\n",
+       " 'tư@@',\n",
+       " '2',\n",
+       " '2@@',\n",
+       " ',',\n",
+       " '25',\n",
+       " '0',\n",
+       " 'ngườ@@',\n",
+       " 'o',\n",
+       " 'xuống',\n",
+       " 'chỉ',\n",
+       " 'còn',\n",
+       " '1.',\n",
+       " '30',\n",
+       " '0',\n",
+       " 'người',\n",
+       " 'do',\n",
+       " 'số',\n",
+       " 'lượng',\n",
+       " 'trẻ',\n",
+       " 'sơ',\n",
+       " 'sinh',\n",
+       " 'quá',\n",
+       " 'thấ@@',\n",
+       " 'p.',\n",
+       " '</s>']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.tokenize('<s> Trong 5 thập kỷ qua, dân số thị trấn này đã giảm gần một nửa, tư2 2, 25 0 ngườo xuống chỉ còn 1. 30 0 người do số lượng trẻ sơ sinh quá thấp. </s>')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "5da698c0-e298-4777-aa4b-560306fb60d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_ds = {\"error_ids\":dataset['error_ids'],\"label_errors\":dataset['label_errors'],\"size_subwords\":dataset['batch_split']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "9ec8c177-51f5-4d79-8a08-52f8f03904d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('sample_dataset.pkl', 'wb') as handle:\n",
+    "    pickle.dump(format_ds, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "978f983c-e922-416a-aa79-994a829bc1c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Ch@@', 'ây', 'ì', 'nộp', 'phạt', 'nguội', '.']"
+       "16"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenizer.tokenize('Chây ì nộp phạt nguội .')"
+    "sum([1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "9f7eea30-0390-40d4-b67d-5f3b60116efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "969"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(format_ds['error_ids'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "2b88a428-5bb3-4470-9a13-77744338d4bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "637\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, i in enumerate(format_ds['error_ids']):\n",
+    "    if i == [   0,  5113, 32000,    13,   963, 28350,  5855,    57,  4616,   611,\n",
+    "           18,    85,  4729,   327, 5, 2]:\n",
+    "        print(idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "888c1c4a-0d84-4910-bb31-f0b8efa29b4b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset[637]['error_ids'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "aaed04f9-e230-4846-a922-f3cb08b6f3e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "37def5d2-6038-4791-bc05-5b8c775c198b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "pos_weight = torch.randint(1, 100, (1,)).float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "9ad8da40-f542-4452-abad-839a121a9608",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([80.])"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_weight"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "361cc6ad-f03b-4509-b1b0-2158991bd544",
+   "id": "88613d55-79f9-4e8a-8eef-5e1dfbb3ff4c",
    "metadata": {},
    "outputs": [],
    "source": []
